# Services/Product/src/main/java/com/Ecom/Product/product/ProductviewController.java
@@ -2,10 +2,7 @@ package com.Ecom.Product.product;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 
@@ -26,6 +23,22 @@ public class ProductviewController {
     @GetMapping
     public ResponseEntity<List<ProductResponse>> findAll(){
         return ResponseEntity.ok(service.findAll());
+    }
+
+    @GetMapping("/Men")
+    public ResponseEntity<List<ProductResponse>> findMen(){
+        return ResponseEntity.ok(service.findAllMen());
+    }
+
+
+    @GetMapping("/Women")
+    public ResponseEntity<List<ProductResponse>> findWomen(){
+        return ResponseEntity.ok(service.findAllWomen());
+    }
+
+    @GetMapping("/Unisex")
+    public ResponseEntity<List<ProductResponse>> findUnisex(){
+        return ResponseEntity.ok(service.findAllUnisex());
     }
 
 }
